# LifeTools

./: CMakeLists.txt  main.cpp
FileReader/: CMakeLists.txt  FileReader.cpp  FileReader.h
